Time: 17 ms (91.51%), Space: 57 MB (60.99%) - LeetHub